# dm-scraper

./: .gitignore  README.md  launcher.py  launcher.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/: app.py  consts.py  index.py  utils.py
src/models/: Company.py  DfInfo.py  Product.py
src/scraper/: dm_scraper.py  main.py  scraper_utils.py
src/ui/: app.py  utils.py
src/ui/scraper/: dm_scraper.py  main.py
