[tool.poetry]
name = "data-scraper-analyzer"
version = "0.1.0"
description = "A tool for web scraping, data analysis, and visualization"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.29.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
streamlit = "^1.43.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
altair = "^5.5.0"
requests = "^2.32.3"
python-dateutil = "^2.9.0"
pytz = "^2025.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.3.5"
autopep8 = "^2.3.2"
pycodestyle = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"

[tool.poetry.scripts]
app = "src.ui.app:main"

